# Semester_project_trustworthy

./: .env  .gitignore  README.md  package.json
Architecture/: Allocation_DoorLock.drawio
Architecture/Allocation View/: Descripion.md  Description.md
Architecture/Diagrams/: README.md
Architecture/Diagrams/C&C/: Description.md  SmartLock.drawio.drawio
Architecture/Diagrams/Sequence/: Description.md
Architecture/Technologies/: Description.md
esp32/: Cargo.toml  espflash.toml
esp32/src/: main.rs
expo_app/: app.json  bun.lockb  package.json
expo_app/app/: _layout.tsx
expo_app/app/(main)/: _layout.tsx  index.tsx
hub_server/: README.md  bun.lockb  package-lock.json  package.json  tsconfig.json
hub_server/src/: index.ts
myworkspace/: README.md  nx.json  package-lock.json
upaal_directory/: app.xml
