[package]
name = "esp32"
version = "0.1.0"
edition = "2021"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embassy-executor = "0.5.0"
embassy-time = "0.3.0"
esp-backtrace = { version = "0.11.0", features = ["esp32", "println", "panic-handler", "halt-cores", "exception-handler"] }
wesp-hal = "0.16.0"
esp-println = { version = "0.9.0", features = ["esp32"] }

